--- a/page6.html
+++ b/page6.html
@@ -549,15 +549,15 @@
 								</div>
 
 								<p class="lead" style="line-height: 1;padding-top: 30px;"><strong>•	Назначение 
-</strong><br>Стабилизатор бурового раствора на водной основе
+</strong><br>&nbsp;&nbsp;Стабилизатор бурового раствора на водной основе
 <br><strong>•	Требования безопасности
-</strong><br>IV класс опасности - малоопасен. Относится к группе негорючих материалов
+</strong><br>&nbsp;&nbsp;IV класс опасности - малоопасен. Относится к группе негорючих материалов
 <br><strong>•	Упаковка
-</strong><br>Мешок 25 кг
+</strong><br>&nbsp;&nbsp;Мешок 25 кг
 <br><strong>•	Условия хранения и транспортировки
-</strong><br>При хранении и транспортировке необходимо соблюдать целостность упаковочной тары. Температура хранения от -50 до +50 С
+</strong><br>&nbsp;&nbsp;При хранении и транспортировке необходимо соблюдать целостность упаковочной тары. Температура хранения от -50 до +50 С
 <br><strong>•	Гарантийный срок
-</strong><br>Гарантийный срок - 12 месяцев с даты изготовления. Срок годности не ограничен при соблюдении условий транспортировки и хранения&nbsp;<br></p>
+</strong><br>&nbsp;&nbsp;Гарантийный срок - 12 месяцев с даты изготовления. Срок годности не ограничен при соблюдении условий транспортировки и хранения&nbsp;<br></p>
 
 							</div>
 						</div>
@@ -577,16 +577,16 @@
 									<h2>Показатели физико-химических свойств стабилизатора S-Drill™ CL</h2>
 								</div>
 
-								<p class="lead center" style="line-height: 1;padding-top: 30px;"><strong>•	Назначение 
-</strong><br>Стабилизатор бурового раствора на водной основе
+								<p class="lead" style="line-height: 1;padding-top: 30px;"><strong>•	Назначение 
+</strong><br>&nbsp;&nbsp;Стабилизатор бурового раствора на водной основе
 <br><strong>•	Требования безопасности
-</strong><br>IV класс опасности - малоопасен. Относится к группе негорючих материалов
+</strong><br>&nbsp;&nbsp;IV класс опасности - малоопасен. Относится к группе негорючих материалов
 <br><strong>•	Упаковка
-</strong><br>Мешок 25 кг
+</strong><br>&nbsp;&nbsp;Мешок 25 кг
 <br><strong>•	Условия хранения и транспортировки
-</strong><br>При хранении и транспортировке необходимо соблюдать целостность упаковочной тары. Температура хранения от -50 до +50 С
+</strong><br>&nbsp;&nbsp;При хранении и транспортировке необходимо соблюдать целостность упаковочной тары. Температура хранения от -50 до +50 С
 <br><strong>•	Гарантийный срок
-</strong><br>Гарантийный срок - 12 месяцев с даты изготовления. Срок годности не ограничен при соблюдении условий транспортировки и хранения&nbsp;<br></p>
+</strong><br>&nbsp;&nbsp;Гарантийный срок - 12 месяцев с даты изготовления. Срок годности не ограничен при соблюдении условий транспортировки и хранения&nbsp;<br></p>
 
 							</div>
 						</div>
