--- a/page8.html
+++ b/page8.html
@@ -100,7 +100,7 @@
 
 		</section><!-- #page-title end -->
 		
-		<section id="content">
+		<section id="content" class="d-none d-md-block">
 			<div class="content-wrap">
 				<div class="container">
 					<div class="row align-items-center">
@@ -109,7 +109,7 @@
 							<div class="heading-block">
 								<h1>Описание</h1>
 							</div>
-							<p class="lead" style="line-height: 1;">Лиофильный наполнитель S-Drill™ Block, получаемый путем паротермической активации и классификации гидролизного лигнина.</p>
+							<p class="lead" style="line-height: 1;padding-top: 30px;">Лиофильный наполнитель S-Drill™ Block, получаемый путем паротермической активации и классификации гидролизного лигнина.</p>
 						</div>
 
 						<div class="col-12 col-lg-6">
@@ -125,7 +125,32 @@
 		    </div>
         </section>
 		
-		<div class="section my-0">
+		<section id="content" class="d-md-none">
+			<div class="content-wrap">
+				<div class="container">
+					<div class="row align-items-center">
+
+						<div class="col-12 col-lg" style="padding-bottom: 20px;">
+							<div class="heading-block center">
+								<h1>Описание</h1>
+							</div>
+							<p class="lead center" style="line-height: 1;padding-top: 30px;">Лиофильный наполнитель S-Drill™ Block, получаемый путем паротермической активации и классификации гидролизного лигнина.</p>
+						</div>
+
+						<div class="col-12 col-lg-6">
+
+							<div class="position-relative overflow-hidden">
+								<img src="assets/images/block-1-1160x773.jpeg" style="border-radius:70px">
+							</div>
+
+						</div>
+
+					</div>
+				</div>
+		    </div>
+        </section>
+		
+		<div class="section my-0 d-none d-md-block">
 					<div class="container">
 
 						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
@@ -138,7 +163,7 @@
 									<h2>Преимущества лиофильного наполнителя S-Drill™ Block</h2>
 								</div>
 
-								<p class="lead">Легкое восстановление приемистости продуктивного пласта после первичного вскрытия без кислотной обработки
+								<p class="lead" style="line-height: 1;padding-top: 30px;">Легкое восстановление приемистости продуктивного пласта после первичного вскрытия без кислотной обработки
 <br>
 <br>Блокирование проникновения буровых растворов и их фильтратов в проницаемые породы стенок скважины
 <br>
@@ -154,7 +179,36 @@
 					</div>
         </div>
 		
-<div class="section my-0" style="background-color: #FFFFFF;">
+		<div class="section my-0 d-md-none">
+					<div class="container">
+
+						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
+							<div class="col-12 col-lg">
+								<img src="assets/images/block-2-1160x773.jpeg" alt="Image" class="center-block" style="border-radius:70px">
+							</div>
+
+							<div class="col-12 col-lg-6">
+								<div class="heading-block center">
+									<h2>Преимущества лиофильного наполнителя S-Drill™ Block</h2>
+								</div>
+
+								<p class="lead center" style="line-height: 1;padding-top: 30px;">Легкое восстановление приемистости продуктивного пласта после первичного вскрытия без кислотной обработки
+<br>
+<br>Блокирование проникновения буровых растворов и их фильтратов в проницаемые породы стенок скважины
+<br>
+<br>Стабилизация стенок скважин
+<br>
+<br>Профилактика поглощений бурового раствора
+<br>
+<br>Снижает абразивный износ бурового оборудования.</p>
+
+							</div>
+						</div>
+
+					</div>
+        </div>
+		
+<div class="section my-0 d-none d-md-block" style="background-color: #FFFFFF;">
 					<div class="container">
 
 						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
@@ -167,23 +221,52 @@
 									<h2>Показатели физико-химических свойств стабилизатора S-Drill™ Block</h2>
 								</div>
 
-								<p class="lead"><strong>•	Назначение 
-</strong><br>Лиофильный наполнитель для бурового раствора
+								<p class="lead" style="line-height: 1;padding-top: 30px;"><strong>•	Назначение 
+</strong><br>&nbsp;&nbsp;Лиофильный наполнитель для бурового раствора
 <br><strong>•	Требования безопасности
-</strong><br>IV класс опасности - малоопасен. Относится к трудновоспламенияемым горючим материалам по ГОСТ 12.1.004
+</strong><br>&nbsp;&nbsp;IV класс опасности - малоопасен. Относится к трудновоспламенияемым горючим материалам по ГОСТ 12.1.004
 <br><strong>•	Упаковка
-</strong><br>Мешок 25 кг
+</strong><br>&nbsp;&nbsp;Мешок 25 кг
 <br><strong>•	Условия хранения и транспортировки
-</strong><br>При хранении и транспортировке необходимо соблюдать целостность упаковочной тары. Температура хранения от -40 до +50 С
+</strong><br>&nbsp;&nbsp;При хранении и транспортировке необходимо соблюдать целостность упаковочной тары. Температура хранения от -40 до +50 С
 <br><strong>•	Гарантийный срок
-</strong><br>Гарантийный срок - 12 месяцев с даты изготовления. Срок годности не ограничен при соблюдении условий транспортировки и хранения&nbsp;<br></p>
+</strong><br>&nbsp;&nbsp;Гарантийный срок - 12 месяцев с даты изготовления. Срок годности не ограничен при соблюдении условий транспортировки и хранения&nbsp;<br></p>
 
 							</div>
 						</div>
 
 					</div>
 </div>
-<section id="content" style="background-color: #FAFAFA">
+<div class="section my-0 d-md-none" style="background-color: #FFFFFF;">
+					<div class="container">
+
+						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
+							<div class="col-12 col-lg">
+								<img src="assets/images/cl-11-1046x448.png" alt="Image" class="center-block">
+							</div>
+
+							<div class="col-12 col-lg-6">
+								<div class="heading-block center">
+									<h2>Показатели физико-химических свойств стабилизатора S-Drill™ Block</h2>
+								</div>
+
+								<p class="lead" style="line-height: 1;padding-top: 30px;"><strong>•	Назначение 
+</strong><br>&nbsp;&nbsp;Лиофильный наполнитель для бурового раствора
+<br><strong>•	Требования безопасности
+</strong><br>&nbsp;&nbsp;IV класс опасности - малоопасен. Относится к трудновоспламенияемым горючим материалам по ГОСТ 12.1.004
+<br><strong>•	Упаковка
+</strong><br>&nbsp;&nbsp;Мешок 25 кг
+<br><strong>•	Условия хранения и транспортировки
+</strong><br>&nbsp;&nbsp;При хранении и транспортировке необходимо соблюдать целостность упаковочной тары. Температура хранения от -40 до +50 С
+<br><strong>•	Гарантийный срок
+</strong><br>&nbsp;&nbsp;Гарантийный срок - 12 месяцев с даты изготовления. Срок годности не ограничен при соблюдении условий транспортировки и хранения&nbsp;<br></p>
+
+							</div>
+						</div>
+
+					</div>
+</div>
+<section id="content" style="background-color: #FAFAFA" class="d-none d-md-block">
 			<div class="content-wrap">
 				<div class="container">
 					<div class="row align-items-center">
@@ -192,10 +275,10 @@
 							<div class="heading-block">
 								<h1>Экология и безопасность</h1>
 							</div>
-							<p class="lead">•	S-Drill™ Block не классифицируется как опасный продукт  
-<br>•	Реагенты биоразлагаемы и не летучи 
-<br>•	Реагенты не трансформируются в окружающей среде и не экотоксичны 
-<br>•	Реагент S-Drill™ Block не содержит хлорорганических соединений&nbsp;<br></p>
+							<p class="lead" style="line-height: 1;padding-top: 30px;"><strong>•</strong>	S-Drill™ Block не классифицируется как опасный продукт  
+<br><strong>•</strong>	Реагенты биоразлагаемы и не летучи 
+<br><strong>•</strong>	Реагенты не трансформируются в окружающей среде и не экотоксичны 
+<br><strong>•</strong>	Реагент S-Drill™ Block не содержит хлорорганических соединений&nbsp;<br></p>
 						</div>
 
                         <div class="col-12 col-lg-6">
@@ -208,7 +291,32 @@
 		    </div>
 </section>
 
-<div class="section my-0" style="background-color: #FFFFFF;">
+<section id="content" style="background-color: #FAFAFA" class="d-md-none">
+			<div class="content-wrap">
+				<div class="container">
+					<div class="row align-items-center">
+
+						<div class="col-12 col-lg">
+							<div class="heading-block center">
+								<h1>Экология и безопасность</h1>
+							</div>
+							<p class="lead" style="line-height: 1;padding-top: 30px;"><strong>•</strong>	S-Drill™ Block не классифицируется как опасный продукт  
+<br><strong>•</strong>	Реагенты биоразлагаемы и не летучи 
+<br><strong>•</strong>	Реагенты не трансформируются в окружающей среде и не экотоксичны 
+<br><strong>•</strong>	Реагент S-Drill™ Block не содержит хлорорганических соединений&nbsp;<br></p>
+						</div>
+
+                        <div class="col-12 col-lg-6">
+								<img src="assets/images/cl-12-562x833.jpeg" style="border-radius:70px">
+						</div>
+
+
+					</div>
+				</div>
+		    </div>
+</section>
+
+<div class="section my-0 d-none d-md-block" style="background-color: #FFFFFF;">
 					<div class="container">
 
 						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
@@ -221,7 +329,28 @@
 									<h2>Производственная база</h2>
 								</div>
 
-								<p class="lead">Собственная производственная база с опытно-промышленным участком позволяет проводить создание модификаций реагента для выполнения целевых функций бурового раствора под задачи Заказчика.</p>
+								<p class="lead" style="line-height: 1;padding-top: 30px;">Собственная производственная база с опытно-промышленным участком позволяет проводить создание модификаций реагента для выполнения целевых функций бурового раствора под задачи Заказчика.</p>
+
+							</div>
+						</div>
+
+					</div>
+</div>
+
+<div class="section my-0 d-md-none" style="background-color: #FFFFFF;">
+					<div class="container">
+
+						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
+							<div class="col-12 col-lg">
+								<img src="assets/images/cl-13-1160x870.jpeg" alt="Image" class="center-block" style="border-radius:70px">
+							</div>
+
+							<div class="col-12 col-lg-6">
+								<div class="heading-block center">
+									<h2>Производственная база</h2>
+								</div>
+
+								<p class="lead center" style="line-height: 1;padding-top: 30px;">Собственная производственная база с опытно-промышленным участком позволяет проводить создание модификаций реагента для выполнения целевых функций бурового раствора под задачи Заказчика.</p>
 
 							</div>
 						</div>
@@ -286,7 +415,7 @@
     </div>
 </section>
 
-<section data-bs-version="5.1" class="slider4 mbr-embla cid-t7p5G30AsS d-md-none" id="slider4-4f">
+<section data-bs-version="5.1" class="slider4 mbr-embla cid-t7p5G30AsS d-md-none" id="slider4-4f" style="background-color: #FAFAFA">
     
     
     <div class="position-relative text-center">
