--- a/page7.html
+++ b/page7.html
@@ -259,7 +259,7 @@
 					</div>
 </div>
 
-<section id="content" style="background-color: #FAFAFA;">
+<section id="content" style="background-color: #FAFAFA;" class="d-none d-md-block">
 			<div class="content-wrap">
 				<div class="container">
 					<div class="row align-items-center">
@@ -268,10 +268,10 @@
 							<div class="heading-block">
 								<h1>Экология и безопасность</h1>
 							</div>
-							<p class="lead">•	S-Drill™ St не классифицируется как опасный продукт 
-<br>•	Реагенты биоразлагаемы и не летучи 
-<br>•	Реагенты не трансформируются в окружающей среде и не экотоксичны 
-<br>•	Реагент S-Drill™ St не содержит хлорорганических соединений<br></p>
+							<p class="lead" style="line-height: 1;padding-top: 30px;"><strong>•</strong>	S-Drill™ St не классифицируется как опасный продукт 
+<br><strong>•</strong>	Реагенты биоразлагаемы и не летучи 
+<br><strong>•</strong>	Реагенты не трансформируются в окружающей среде и не экотоксичны 
+<br><strong>•</strong>	Реагент S-Drill™ St не содержит хлорорганических соединений<br></p>
 						</div>
 
                         <div class="col-12 col-lg-6">
@@ -283,7 +283,33 @@
 				</div>
 		    </div>
 </section>
-<div class="section my-0" style="background-color: #FFFFFF;">
+
+<section id="content" style="background-color: #FAFAFA;" class="d-md-none">
+			<div class="content-wrap">
+				<div class="container">
+					<div class="row align-items-center">
+
+						<div class="col-12 col-lg" style="padding-bottom: 20px;">
+							<div class="heading-block center">
+								<h1>Экология и безопасность</h1>
+							</div>
+							<p class="lead" style="line-height: 1;padding-top: 30px;"><strong>•</strong>	S-Drill™ St не классифицируется как опасный продукт 
+<br><strong>•</strong>	Реагенты биоразлагаемы и не летучи 
+<br><strong>•</strong>	Реагенты не трансформируются в окружающей среде и не экотоксичны 
+<br><strong>•</strong>	Реагент S-Drill™ St не содержит хлорорганических соединений<br></p>
+						</div>
+
+                        <div class="col-12 col-lg-6">
+								<img src="assets/images/cl-12-562x833.jpeg" style="border-radius:70px">
+						</div>
+
+
+					</div>
+				</div>
+		    </div>
+</section>
+
+<div class="section my-0 d-none d-md-block" style="background-color: #FFFFFF;">
 					<div class="container">
 
 						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
@@ -296,7 +322,28 @@
 									<h2>Производственная база</h2>
 								</div>
 
-								<p class="lead">Собственная производственная база с опытно-промышленным участком позволяет проводить создание модификаций реагента для выполнения целевых функций бурового раствора под задачи Заказчика.</p>
+								<p class="lead" style="line-height: 1;padding-top: 30px;">Собственная производственная база с опытно-промышленным участком позволяет проводить создание модификаций реагента для выполнения целевых функций бурового раствора под задачи Заказчика.</p>
+
+							</div>
+						</div>
+
+					</div>
+</div>
+
+<div class="section my-0 d-md-none" style="background-color: #FFFFFF;">
+					<div class="container">
+
+						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
+							<div class="col-12 col-lg">
+								<img src="assets/images/cl-13-1160x870.jpeg" alt="Image" class="center-block" style="border-radius:70px">
+							</div>
+
+							<div class="col-12 col-lg-6">
+								<div class="heading-block center">
+									<h2>Производственная база</h2>
+								</div>
+
+								<p class="lead center" style="line-height: 1;padding-top: 30px;">Собственная производственная база с опытно-промышленным участком позволяет проводить создание модификаций реагента для выполнения целевых функций бурового раствора под задачи Заказчика.</p>
 
 							</div>
 						</div>
@@ -361,7 +408,7 @@
     </div>
 </section>
 
-<section data-bs-version="5.1" class="slider4 mbr-embla cid-t7p5G30AsS d-md-none" id="slider4-4f">
+<section data-bs-version="5.1" class="slider4 mbr-embla cid-t7p5G30AsS d-md-none" id="slider4-4f" style="background-color: #FAFAFA">
     
     
     <div class="position-relative text-center">
