--- a/page9.html
+++ b/page9.html
@@ -39,6 +39,8 @@
 	
     	<!-- Landing Demo Specific Stylesheet -->
 	<link rel="stylesheet" href="demos/landing/landing.css" type="text/css" />
+	
+
 </head>
 <body>
 	<header id="header" class="border-bottom-0">
@@ -49,8 +51,8 @@
 						<!-- Logo
 						============================================= -->
 						<div id="logo">
-							<a href="index.html" class="standard-logo" data-dark-logo="assets/images/tild6161-6566-4364-b935-666631663139-logo2x-121x161.png"><img src="assets/images/tild6161-6566-4364-b935-666631663139-logo2x-121x161.png" alt="SynergyCom Logo"></a>
-							<a href="index.html" class="retina-logo" data-dark-logo="assets/images/tild6161-6566-4364-b935-666631663139-logo2x-121x161.png"><img src="assets/images/tild6161-6566-4364-b935-666631663139-logo2x-121x161.png" alt="SynergyCom Logo"></a>
+							<a href="index.html" class="standard-logo" data-dark-logo="assets/images/Logo_Synergy.png" style="height: 70px; padding-top: 5px;"><img src="assets/images/Logo_Synergy.png" alt="SynergyCom Logo"></a>
+							<a href="index.html" class="retina-logo" data-dark-logo="assets/images/Logo_Synergy.png" style="height: 70px; padding-top: 5px; padding-bottom: 5px;"><img src="assets/images/Logo_Synergy.png" alt="SynergyCom Logo"></a>
 						</div><!-- #logo end -->
 
 						<div id="primary-menu-trigger">
@@ -95,7 +97,7 @@
 	</header><!-- #header end -->
 
 
-	<section id="page-title" class="page-title-pattern">
+	<section id="page-title" class="page-title-pattern" style="padding-top: 100px;padding-bottom: 100px;">
 
 			<div class="container clearfix">
 				<h1>Контакты</h1>
@@ -106,7 +108,7 @@
 	<!-- Content
 		============================================= -->
 		<section id="content" style="padding-bottom: 0px;">
-			<div class="content-wrap" style="padding-bottom: 0px;">
+			<div class="content-wrap" style="padding-top: 182px;padding-bottom: 182px;">
 
 				<div class="section bg-transparent mt-0">
 					<div class="container">
@@ -130,38 +132,13 @@
 								</div>
 							</div>
 							<div class="col-lg-7">
-								<img src="assets/images/1.jpg" alt="Office Image" style="border-radius:70px">
-							</div>
-						</div>
-					</div>
-					<div class="section bg-transparent mt-0">
-					<div class="container">
-						<div class="row justify-content-between col-mb-50">
-							<div class="col-lg-5">
-								<div class="dotted-bg dotted-bg-dark">
-									<h2 class="nott mb-3 display-3 fw-bold">Производство</h2>
-								</div>
-
-								<div class="clear"></div>
-
-								<div class="my-5">
-									<address>
-										<strong>Адрес</strong><br>
-										247484, Республика Беларусь,<br>
-										Гомельская область, Речицкий район,д. Пригородная, ул. Урожайная, 5<br>
-									</address>
-									<abbr title="Phone Number"><strong>Телефон:</strong></abbr> +375 17 302-53-50<br>
-							<abbr title="Phone Number"><strong>Телефон:</strong></abbr> +375 29 664-26-10<br>
-							<abbr title="Email Address"><strong>Email:</strong></abbr> by-sales@synergyhorizon.com<br>
-								</div>
-							</div>
-							<div class="col-lg-7">
-								<img src="assets/images/2.jpg" alt="Office Image" style="border-radius:70px">
+								<img src="assets/images/contact.jpg" alt="Office Image" style="border-radius:70px">
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+</body>
 
 <footer id="footer" class="dark">
 			<!-- Copyrights
@@ -242,6 +219,4 @@
 			});
 		});
 	</script>
-	
-</body>
 </html>
